[tool.poetry]
name = "libb-db"
version = "0.1.0"
description = ""
authors = ["bissli <bissli@xyz.com>"]
readme = "README.md"
packages = [{ include = "db", from = "src" }]

[tool.poetry.dependencies]
python = "~3.11"

pandas = "*"
numpy = "*"
sqlalchemy = { version = "^2.0.27", extras = ["postgresql-psycopg2binary", "postgresql-psycopgbinary", "mssql-pymssql"] }

libb-util = { git = "https://github.com/bissli/libb-util" }
libb-date = { git = "https://github.com/bissli/libb-date" }

# == test
asserts = { version = "*", optional = true }
pytest = { version = "*", optional = true }
pdbpp = { git = "https://github.com/pdbpp/pdbpp", optional = true }
docker = { version = "*", optional = true }

[tool.poetry.extras]
test = [
  "asserts",
  "pdbpp",
  "pytest",
  "docker",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
